# gelato

./: .gitignore  Cargo.toml  README.md  config.toml.template  gelato.desktop
src/: app.rs  client.rs  content.rs  lib.rs  main.rs  message.rs  model.rs  style.rs  util.rs  view.rs
src/controller/: connection.rs
src/model/: message.rs  subscribe_irc.rs  subscribe_time.rs
src/view/: app.rs  download.rs  every.rs  message.rs  mod.rs  time.rs  util.rs
