[package]
name = "gelato"
version = "0.0.1"
description = "A GUI IRC Client. Pop and Cool"
authors = ["Yuri Yamamoto (lilybrevec) <allabrevec@gmail.com>"]
keywords = ["irc", "client", "gui"]
repository = "https://github.com/lilybrevec/gelato"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9.55"
openssl = "0.10.29"
irc = { git = "https://github.com/lilybrevec/irc", branch = "0.14", features = ["ctcp", "toml"] }
futures = "0.3.4"
tokio = "0.2.18"
failure = "0.1.7"

#iced = { path = "../iced", features = ["async-std"] }
iced = { version = "0.1.1", features = ["async-std"] }
iced_native = "0.2.1"
iced_futures = { version = "0.1.1", features = ["async-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1.0", features = ["unstable"] }
directories = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

[package.metadata.deb]
assets = [
    ["target/release/gelato", "usr/bin/gelato", "755"],
    ["gelato.desktop", "usr/share/applications/", "644"],
]