[package]
name = "gelato"
version = "0.0.2"
description = "A GUI IRC Client. Pop and Cool"
authors = ["Yuri Yamamoto (lilybrevec) <allabrevec@gmail.com>"]
keywords = ["irc", "client", "gui"]
repository = "https://github.com/lilybrevec/gelato"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = { version = "0.15" }
futures = "0.3.14"
async-std = "1.9.0"
failure = "0.1.8"
anyhow = "1.0"

iced = { version = "0.3", features = ["async-std", "tokio"] }
iced_native = "0.4.0"
iced_futures = { version = "0.3.0", features = ["async-std"] }
serde = { version = "1.0.125" }
serde_json = "1.0.64"

[package.metadata.deb]
assets = [
    ["target/release/gelato", "usr/bin/gelato", "755"],
    ["gelato.desktop", "usr/share/applications/", "644"],
]